--- a/src/main/resources/templates/client/component/cartTable.html
+++ b/src/main/resources/templates/client/component/cartTable.html
@@ -24,7 +24,7 @@
                                                 <li class="text-content"><span
                                                         class="text-title">Quantity</span><span
                                                         th:text="${item.stockQuantity}"
-                                                        th:data-quantity="${item.stockQuantity}"></span></li>
+                                                        ></span></li>
 
 
                                             </ul>
@@ -45,7 +45,7 @@
                                         <div class="cart_qty">
                                             <div class="input-group">
                                                 <button type="button"
-                                                        th:onclick="'minusQuantity(' + ${item.productId} + ')'"
+                                                        th:onclick="'minusQuantity(' + ${item.productId} + ' )'"
                                                         class="btn qty-left-minus"
                                                         data-type="minus">
                                                     <i class="fa fa-minus ms-0"></i>
@@ -54,11 +54,13 @@
                                                 <input class="form-control input-number qty-input"
                                                        type="text"
                                                        name="quantity"
+                                                       th:data-quantity="${item.stockQuantity}"
+                                                       th:attr="onchange='validateQuantity(this, ' + ${item.productId} + ')'"
                                                        th:data-productId="${item.productId}"
                                                        th:value="${item.quantityCart}">
 
                                                 <button type="button"
-                                                        th:onclick="'plusQuantity(' + ${item.productId} + ')'"
+                                                        th:onclick="'plusQuantity(' + ${item.productId} + ', ' + ${item.stockQuantity} + ' )'"
                                                         class="btn qty-right-plus"
                                                         data-type="plus">
                                                     <i class="fa fa-plus ms-0"></i>
@@ -77,8 +79,10 @@
 
                                 <td class="save-remove">
                                     <h4 class="table-title text-content">Action</h4>
-                                    <a class="save notifi-wishlist" href="javascript:void(0)">Save for later</a>
-                                    <a class="remove close_button" href="javascript:void(0)">Remove</a>
+
+
+                                    <button
+                                            class="remove close_button"  th:onclick="'removeCartItem(' + ${item.productId} + ' )'">Remove</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -93,37 +97,12 @@
                         <h3>Cart Total</h3>
                     </div>
 
-                    <div class="summery-contain">
-                        <div class="coupon-cart">
-                            <h6 class="text-content mb-2">Coupon Apply</h6>
-                            <div class="mb-3 coupon-box input-group">
-                                <input type="email" class="form-control" id="exampleFormControlInput1"
-                                       placeholder="Enter Coupon Code Here...">
-                                <button class="btn-apply">Apply</button>
-                            </div>
-                        </div>
-                        <ul>
-                            <li>
-                                <h4>Subtotal</h4>
-                                <h4 class="price">$125.65</h4>
-                            </li>
 
-                            <li>
-                                <h4>Coupon Discount</h4>
-                                <h4 class="price">(-) 0.00</h4>
-                            </li>
-
-                            <li class="align-items-start">
-                                <h4>Shipping</h4>
-                                <h4 class="price text-end">$6.90</h4>
-                            </li>
-                        </ul>
-                    </div>
 
                     <ul class="summery-total">
                         <li class="list-total border-top-0">
                             <h4>Total (USD)</h4>
-                            <h4 class="price theme-color">$132.58</h4>
+                            <h4 class="price theme-color" th:text="${sumTotalCart}">$132.58</h4>
                         </li>
                     </ul>
 
