Add trending products feature and fix minor issues in product display

--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -84,6 +84,7 @@
         </ul>
     </div>
     <!-- mobile fix menu end -->
+    <div id="alerts-top-right" class="slide-alerts top-right" aria-live="polite" aria-atomic="true"></div>
 
     <!-- Home Section Start -->
 <div th:replace="~{client/component/bannerHomeClient::bannerHomeClient}"></div>
