--- a/src/main/resources/templates/client/component/cartTable.html
+++ b/src/main/resources/templates/client/component/cartTable.html
@@ -10,7 +10,7 @@
                                 <td class="product-detail">
                                     <div class="product border-0">
                                         <a href="product-left-thumbnail.html" class="product-image">
-                                            <img src="../assets/images/vegetable/product/1.png"
+                                            <img th:src="@{${item.productImage}}"
                                                  class="img-fluid blur-up lazyload" alt="">
                                         </a>
                                         <div class="product-detail">
