Add trending products feature and fix minor issues in product display

--- a/src/main/resources/templates/client/component/categoryMenu.html
+++ b/src/main/resources/templates/client/component/categoryMenu.html
@@ -13,12 +13,12 @@
             <div class="col-12">
                 <div class="slider-9">
                     <div  th:each="category: ${categories}">
-                        <a href="shop-left-sidebar.html" class="category-box wow fadeInUp">
+                        <div href="shop-left-sidebar.html" class="category-box wow fadeInUp">
                             <div>
                                 <img src="../assets/images/Flower/logo.jpg" class="blur-up lazyload" alt="">
                                 <h5 th:text ="${category.categoryName}">Vegetables & Fruit</h5>
                             </div>
-                        </a>
+                        </div>
                     </div>
 
 
