--- a/src/main/resources/templates/client/component/headerClient.html
+++ b/src/main/resources/templates/client/component/headerClient.html
@@ -119,6 +119,10 @@
 
                                                 <li class="product-box-contain">
                                                     <i></i>
+                                                    <a th:href="@{/user/dashboard}">My Account</a>
+                                                </li>
+                                                <li class="product-box-contain">
+                                                    <i></i>
                                                     <a th:href="@{/logout}">Log Out</a>
                                                 </li>
                                             </div>
