--- a/src/main/resources/templates/client/component/cartTable.html
+++ b/src/main/resources/templates/client/component/cartTable.html
@@ -11,7 +11,7 @@
                                     <div class="product border-0">
                                         <a href="product-left-thumbnail.html" class="product-image">
                                             <img th:src="@{${item.productImage}}"
-                                                 class="img-fluid blur-up lazyload" alt="">
+                                                 class="img-fluid blur-up lazyload" alt="" style="border-radius: 10px;">
                                         </a>
                                         <div class="product-detail">
                                             <ul>
@@ -111,9 +111,9 @@
                             <li>
 
                                     <input type="hidden" name="amount" id="amount" th:value="${sumTotalCart}"/>
-                                    <button  id="payBtn" th:attr="onclick='pay()'"
+                                    <a  id="payBtn" th:href="@{/cart/checkout}"
                                              class="btn btn-animation proceed-btn fw-bold">Process To Checkout
-                                    </button>
+                                    </a>
 
 
                             </li>
