--- a/src/main/resources/templates/client/component/productMenu2.html
+++ b/src/main/resources/templates/client/component/productMenu2.html
@@ -18,7 +18,7 @@
                                 <div class="product-image">
                                     <a th:href="@{/product-detail/{id}(id=${products[i].productId})}">
                                         <img th:src="@{${products[i].imageUrl}}"
-                                             class="img-fluid blur-up lazyload" alt="">
+                                             class="img-fluid blur-up lazyload" alt="" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;">
                                     </a>
                                     <ul class="product-option justify-content-around">
                                         <li data-bs-toggle="tooltip" data-bs-placement="top" title="View">
@@ -67,7 +67,7 @@
                                         <span>(34)</span>
                                     </div>
 
-                                    <h6 class="sold weight text-content fw-normal">1 KG</h6>
+
 
                                     <div class="counter-box">
                                         <h6 class="sold theme-color" th:text="'$ ' + ${products[i].price}">$ 80.00</h6>
@@ -89,7 +89,7 @@
                                 <div class="product-image">
                                     <a th:href="@{/product-detail/{id}(id=${products[i+1].productId})}">
                                         <img th:src="@{${products[i+1].imageUrl}}"
-                                             class="img-fluid blur-up lazyload" alt="">
+                                             class="img-fluid blur-up lazyload" alt="" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;">
                                     </a>
                                     <ul class="product-option justify-content-around">
                                         <li data-bs-toggle="tooltip" data-bs-placement="top" title="View">
@@ -138,7 +138,7 @@
                                         <span>(34)</span>
                                     </div>
 
-                                    <h6 class="sold weight text-content fw-normal">1 KG</h6>
+
 
                                     <div class="counter-box">
                                         <h6 class="sold theme-color" th:text="'$ ' + ${products[i +1].price}">$ 80.00</h6>
