--- a/src/main/resources/templates/client/productdetail.html
+++ b/src/main/resources/templates/client/productdetail.html
@@ -137,7 +137,7 @@
                                             <div class="slider-image">
                                                 <img th:src="@{${product.imageUrl}}" id="img-1"
                                                      data-zoom-image="../assets/images/product/category/1.jpg"
-                                                     class="img-fluid image_zoom_cls-0 blur-up lazyload" alt="">
+                                                     class="img-fluid image_zoom_cls-0 blur-up lazyload" alt="" style="width: 100%; height: 100%; object-fit: cover;">
                                             </div>
                                         </div>
 
