update manage product

--- a/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
+++ b/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
@@ -42,11 +42,11 @@
                             </a>
                             <ul class="sidebar-submenu">
                                 <li>
-                                    <a th:href="@{/products}">Products</a>
+                                    <a th:href="@{/manager/products}">Products</a>
                                 </li>
 
                                 <li>
-                                    <a th:href="@{/products/add}">Add New Products</a>
+                                    <a th:href="@{/manager/products/add}">Add New Products</a>
                                 </li>
                             </ul>
                         </li>
