--- a/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
+++ b/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
@@ -46,7 +46,7 @@
                                 </li>
 
                                 <li>
-                                    <a th:href="@{/manager/products/add}">Add New Products</a>
+                                    <a th:href="@{/manager/products/new}">Add New Products</a>
                                 </li>
                             </ul>
                         </li>
