--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -121,11 +121,11 @@
                         <div class="service-contain">
                             <div class="service-box">
                                 <div class="service-image">
-                                    <img src="../assets/svg/product.svg" class="blur-up lazyload" alt="">
+                                    <img src="../assets/images/Flower/1.jpg" class="blur-up lazyload" alt="">
                                 </div>
 
                                 <div class="service-detail">
-                                    <h5>Every Fresh Products</h5>
+                                    <h5>The Rustic Bloom</h5>
                                 </div>
                             </div>
 
@@ -135,7 +135,7 @@
                                 </div>
 
                                 <div class="service-detail">
-                                    <h5>Free Delivery For Order Over $50</h5>
+                                    <h5>Free shipping on every order</h5>
                                 </div>
                             </div>
 
@@ -174,17 +174,16 @@
                             </div>
 
                             <div class="footer-logo-contain">
-                                <p>We are a friendly bar serving a variety of cocktails, wines and beers. Our bar is a
-                                    perfect place for a couple.</p>
+                                <p>Let your love blossom at our friendly bar. A perfect place for a date night.</p>
 
                                 <ul class="address">
                                     <li>
                                         <i data-feather="home"></i>
-                                        <a href="javascript:void(0)">1418 Riverwood Drive, CA 96052, US</a>
+                                        <a >Only Online</a>
                                     </li>
                                     <li>
                                         <i data-feather="mail"></i>
-                                        <a href="javascript:void(0)">support@fastkart.com</a>
+                                        <a >nctdat1105@gmail.com</a>
                                     </li>
                                 </ul>
                             </div>
@@ -570,23 +569,7 @@
 
 
     <!-- Cookie Bar Box Start -->
-    <div class="cookie-bar-box">
-        <div class="cookie-box">
-            <div class="cookie-image">
-                <img src="../assets/images/cookie-bar.png" class="blur-up lazyload" alt="">
-                <h2>Cookies!</h2>
-            </div>
 
-            <div class="cookie-contain">
-                <h5 class="text-content">We use cookies to make your experience better</h5>
-            </div>
-        </div>
-
-        <div class="button-group">
-            <button class="btn privacy-button">Privacy Policy</button>
-            <button class="btn ok-button">OK</button>
-        </div>
-    </div>
     <!-- Cookie Bar Box End -->
 
     <!-- Deal Box Modal Start -->
